fixed more spacing

--- a/farmer-landing.css
+++ b/farmer-landing.css
@@ -29,8 +29,8 @@ body {
     position: absolute;
     width: 331px;
     height: 112px;
-    left: 20%;
-    top: 60%;
+    left: 28%;
+    top: 52%;
 
     border: 5px solid #FECEAB;
     box-sizing: border-box;
@@ -58,8 +58,8 @@ body {
     position: absolute;
     width: 331px;
     height: 112px;
-    left:70%;
-    top: 60%;
+    left:62%;
+    top: 52%;
 
     border: 5px solid #FECEAB;
     box-sizing: border-box;
